# SQLiteManager

./: .gitignore  CMakeLists.txt  LICENSE.txt  config.h  main.cpp
include/: Database.h  Response.h  SQLiteManager.h
